gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: main-http
spec:
  parentRefs:
    - kind: Gateway
      name: main-gw
  hostnames:
    - gke.irori235.dev
  rules:
    - backendRefs:
        - name: nginx
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-http-app
spec:
  parentRefs:
    - kind: Gateway
      name: main-gw
  hostnames:
    - nginx.gke.irori235.dev
  rules:
    - backendRefs:
        - name: nginx
          port: 80
